--- a/public/index.html
+++ b/public/index.html
@@ -22,14 +22,26 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <!-- Add your site or application content here -->
         <h1>Sample Application</h1>
+        <!-- An AngularJS application consists of following three important parts −
+
+             * ng-app − This directive defines and links an AngularJS application to HTML.
+
+             * ng-model − This directive binds the values of AngularJS application data to HTML input controls.
+
+             * ng-bind − This directive binds the AngularJS Application data to HTML tags. -->
 
         <div ng-app = "">
            <p>Enter your Name: <input type = "text" ng-model = "name"></p>
            <p>Hello <span ng-bind = "name"></span>!</p>
         </div>
+        <!-- * ng-app directive indicates the start of AngularJS application.
 
+             * ng-model directive then creates a model variable named "name" which can be used with the html page and within the div having ng-app directive.
+
+             * ng-bind then uses the name model to be displayed in the html span tag whenever user input something in the text box.
+
+        Closing</div> tag indicates the end of AngularJS application. -->
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
